--- a/aula11-fontes/aula19-tabelas/tabelas004.css
+++ b/aula11-fontes/aula19-tabelas/tabelas004.css
@@ -5,8 +5,23 @@ body {
 table {
    border-collapse: collapse;
    width: 400px;
-   margin: auto;
-   margin-bottom: 12px;
+}
+   
+
+table.tabela{
+    width: 400px;
+    margin-bottom: 12px;
+}
+
+table.boletim{
+ width: 20px;
+ margin: auto;
+}
+
+caption{
+    border: 1px solid black;
+    background-color: #111;
+    color: white;
 }
 td,th{
     
@@ -14,7 +29,7 @@ td,th{
     border: 1px solid black;
 }
 td{
-    padding: 8px;
+    padding: 15px;
     text-align: center;
 }
 th{
@@ -23,3 +38,12 @@ th{
 div{
     border-bottom: 2px solid #84e;
 }
+table.TR{
+    width: 20PX;
+    margin: auto;
+}
+div{
+    border-bottom: 2px solid #84e;
+    padding: 10px;
+}
+
