--- a/aula 20-form/atv02.css
+++ b/aula 20-form/atv02.css
@@ -4,8 +4,10 @@
     gap: 5px;
 }
 #idemail{
-    border: 3px solid #6495ED;
-    border-bottom: 3px solid white;
+    border: 1px solid #6495ED;
+    border-bottom: 1px solid white;
+    background-color:#6495ED;
+    width: 400px;
 }
 .pp{
     text-align: center;
@@ -13,5 +15,40 @@
 .caixa{
     border:1px solid black ;
     background-color: #6495ED;
-    margin: 60PX;
+    margin: 100px;
+    padding: 25px;
+}
+#idnome{
+    border: 3px solid #6495ED;
+    border-bottom: 1px solid white;
+    background-color: #6495ED;
+    width: 400px; 
+    
+}
+#idmensagem{
+    border: 3px solid #6495ED;
+    border-bottom: 1px solid white;
+    background-color: #6495ED;
+    width: 400PX;
+    
+    
+
+}
+form{
+    color: white;
+    text-align: left;
+}
+.Enviar{
+    text-align: center;
+}
+.tud{
+    width: 300px;
+    border-radius: 5px;
+    border: 1px solid white;
+    text-align: center;
+}
+.dd{
+    display: flex;
+    justify-content: center;
+    
 }
