--- a/aula 20-form/atv02.css
+++ b/aula 20-form/atv02.css
@@ -17,6 +17,7 @@
     background-color: #6495ED;
     margin: 100px;
     padding: 25px;
+    border-radius: 5px;
 }
 #idnome{
     border: 3px solid #6495ED;
